<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hva skjer i Bergen?</string>
    
    <string name="start_button_parking">Ledig parkering</string>
    <string name="start_button_weather">Været</string>
    <string name="start_button_cinema">Kinoprogram</string>
    <string name="start_button_concerts">Konserter</string>
    <string name="start_button_play">Teater</string>
    <string name="start_button_taxi">Taxi</string>
    
    <string name="parking_toast_bad">Nei og nei! </string>
    <string name="parking_wait_dialog_title">Laster siden</string>
    <string name="parking_wait_dialog_message">Henter data fra bergensentrum.no</string>
    <string name="parking_url">http://bergensentrum.no/mobil/</string>
	<string name="parking_sms_question_title">Det ser ikke ut som du har nettilgang.</string>
    <string name="parking_sms_question_message">Vil du motta informasjon om parkering i Bergen sentrum akkurat nå på sms isteden?\nTjenesten koster kr. 3,-</string>
    <string name="parking_sms_question_positive">Ja</string>
    <string name="parking_sms_question_negative">Nei</string>
    <string name="parking_sms_no">90177797</string> <!-- 2077 -->
    <string name="parking_sms_message">P</string>
	<string name="parking_toast_sms_ok">Forespørsel er sendt</string>
    
    <string name="weather_url">http://www.yr.no/sted/Norge/Hordaland/Bergen/Bergen/varsel.xml</string>
	<string name="weather_no_connection_title">Det ser ikke ut som du har nettilgang.</string>
    <string name="weather_no_connection_message">Avbryter</string>
    <string name="weather_no_connection_positive">OK</string>
    <string name="weather_wait_dialog_title">Laster varsel</string>
    <string name="weather_wait_dialog_message">Henter data fra yr.no</string>
    <string name="weather_toast_bad">Nei og nei! </string>
    <string name="weather_toast_bad_unknown_error">En ukjent feil har oppstått ved henting av data fra yr.no. </string>
    
    <string name="cinema_toast_bad">Nei og nei! </string>
    <string name="cinema_wait_dialog_title">Laster siden</string>
    <string name="cinema_wait_dialog_message">Henter data fra bergenkino.no</string>
    <string name="cinema_url">http://www.bergenkino.no/program/</string>
    
    <string name="taxi_call">Ring</string>
	<string name="taxi_sms">Send SMS</string>
    <string name="taxi_bergentaxi_tlf">90177797</string> <!-- 07000 -->
    <string name="taxi_bergentaxi_smscode">TAXI</string>
    <string name="taxi_norgestaxi_tlf">90177797</string> <!-- 08000 -->
    <string name="taxi_bryggentaxi_tlf">90177797</string> <!-- +4755708090 -->
    <string name="taxi_taxi1_tlf">90177797</string> <!-- 05501 -->
    <string name="taxi_bergentaxi_question_title">Bergen Taxi.</string>
    <string name="taxi_bergentaxi_question_message">Hos Bergen Taxi er det flere måter å bestille på. Ringe eller via sms.</string>
    <string name="taxi_bergentaxi_question_positive">Ring</string>
    <string name="taxi_bergentaxi_question_negative">SMS</string>
    <string name="taxi_toast_sms_ok">Forespørsel er sendt</string>
    
    <string name="play_toast_bad">Nei og nei! </string>
    <string name="play_wait_dialog_title">Laster siden</string>
    <string name="play_wait_dialog_message">Henter data fra dns.no</string>
    <string name="play_url">http://www.dns.no/prog.asp</string>
    
    <string name="concert_toast_bad">Nei og nei! </string>
    <string name="concert_wait_dialog_title">Laster siden</string>
    <string name="concert_wait_dialog_message">Henter data fra brak.no</string>
    <string name="concert_url">http://www.brak.no/kalender</string> <!-- http://konsertoversikt.no/konserter/bergen/ -->    

</resources>